@@ -33,7 +33,7 @@
             Body text
         </metal:field>
 
-        <div metal:use-macro="context/document_relateditems/macros/relatedItems">
+        <div tal:replace="structure context/document_relateditems">
             show related items if they exist
         </div>
     
