@@ -44,7 +44,7 @@
             </pre>
         </div>
 
-        <div metal:use-macro="context/document_relateditems/macros/relatedItems">
+        <div tal:replace="structure context/document_relateditems">
             show related items if they exist
         </div>
     
